<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="calling_via_template">Calling via %s</string>
    <string name="card_title_call_ended">Call ended</string>
    <string name="card_title_callback_number">"Your callback number
 %1$s"</string>
    <string name="card_title_callback_number_emergency">"Your emergency callback number
 %1$s"</string>
    <string name="card_title_conf_call">Conference call</string>
    <string name="card_title_dialing">Dialing</string>
    <string name="card_title_hanging_up">Hanging up</string>
    <string name="card_title_in_call">In call</string>
    <string name="card_title_incoming_call">Incoming call</string>
    <string name="card_title_my_phone_number">My number is %s</string>
    <string name="card_title_on_hold">On hold</string>
    <string name="card_title_redialing">Retrying</string>
    <string name="card_title_video_call">Video call</string>
    <string name="card_title_video_call_error">Cannot connect video call</string>
    <string name="card_title_video_call_requesting">Requesting video</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="contactPhoto">contact photo</string>
    <string name="custom_message_cancel">Cancel</string>
    <string name="custom_message_send">Send</string>
    <string name="description_direction_down">Slide down for %s.</string>
    <string name="description_direction_left">Slide left for %s.</string>
    <string name="description_direction_right">Slide right for %s.</string>
    <string name="description_direction_up">Slide up for %s.</string>
    <string name="description_target_accept_upgrade_to_video_request">Accept video request</string>
    <string name="description_target_answer">Answer</string>
    <string name="description_target_answer_audio_call">Answer as audio call</string>
    <string name="description_target_answer_video_call">Answer as video call</string>
    <string name="description_target_decline">Decline</string>
    <string name="description_target_decline_upgrade_to_video_request">Decline video request</string>
    <string name="description_target_send_sms">Send SMS</string>
    <string name="emergency_call_dialog_number_for_display">Emergency number</string>
    <string name="goPrivate">go private</string>
    <string name="incall_call_type_label_sip">SIP call</string>
    <string name="incall_error_supp_service_unknown">Service not supported.</string>
    <string name="incoming_via_template">Incoming via %s</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="notification_action_accept">Accept</string>
    <string name="notification_action_answer_video">Video</string>
    <string name="notification_action_answer_voice">Voice</string>
    <string name="notification_action_dismiss">Dismiss</string>
    <string name="notification_action_end_call">Hang up</string>
    <string name="notification_dialing">Dialing</string>
    <string name="notification_incoming_call">Incoming call</string>
    <string name="notification_incoming_video_call">Incoming video call</string>
    <string name="notification_missedCallTitle">Missed call</string>
    <string name="notification_on_hold">On hold</string>
    <string name="notification_ongoing_call">Ongoing call</string>
    <string name="notification_requesting_video_call">Incoming video request</string>
    <string name="ok">OK</string>
    <string name="onHold">On hold</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenChangeToVoiceText">Change to voice call</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenHoldText">Hold</string>
    <string name="onscreenManageConferenceText">Manage conference call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenOverflowText">More options</string>
    <string name="onscreenPauseVideoText">Pause video</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenSwitchCameraText">Switch camera</string>
    <string name="onscreenVideoCallText">Video call</string>
    <string name="overflowAddMenuItemText">Add call</string>
    <string name="overflowHoldMenuItemText">Hold call</string>
    <string name="overflowMergeMenuItemText">Merge calls</string>
    <string name="overflowResumeMenuItemText">Resume call</string>
    <string name="overflowSwapMenuItemText">Swap calls</string>
    <string name="pause_prompt_no">No</string>
    <string name="pause_prompt_str">"Sending tones
"</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="payphone">Payphone</string>
    <string name="phoneAppLabel">Phone</string>
    <string name="private_num">Private number</string>
    <string name="agif_pickers_add_tab_description">Add</string>
    <string name="agif_pickers_sub_title_top_stickers">Have a little fun. Send a sticker!</string>
    <string name="agif_pickers_title">Start with a sticker.</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="record_notification_button_text_close">CLOSE</string>
    <string name="secOnscreenAddToContactsText">Add to contacts</string>
    <string name="secOnscreenEndCallText">End call</string>
    <string name="secOnscreenMenuDisableExtraVolume">Disable extra volume</string>
    <string name="secOnscreenMenuDisableExtraVolumeTTS">Disable extra volume</string>
    <string name="secOnscreenMenuEnableExtraVolume">Enable extra volume</string>
    <string name="secOnscreenMenuEnableExtraVolumeTTS">Enable extra volume</string>
    <string name="secOnscreenMenuSwitchToVoiceCallText">Switch to voice call</string>
    <string name="secOnscreenMergeText">Merge</string>
    <string name="secOnscreenSpeaker">Speaker</string>
    <string name="secOnscreenSwapText">Swap</string>
    <string name="secOnscreenViewContactText">View contact</string>
    <string name="send_msg">Send Message</string>
    <string name="onscreenVoiceCallText">Voice call</string>
    <string name="rtt_hint_dialog_heading">Real-time text (RTT) calling</string>
    <string name="rtt_hint_dialog_msgbody1_tmo">"Here's what you should know to get your simultaneous voice and Real Time Text(RTT) connections going:"</string>
    <string name="rtt_hint_dialog_msgbody2_tmo">"You'll need to be on 4G LTE or a Wi-Fi connection to have both voice and text."</string>
    <string name="rtt_hint_dialog_msgbody3_tmo">You can start using RTT call with anyone who is on a RTT capable device.</string>
    <string name="rtt_hint_tmo">You just experienced Real Time Text call.</string>
</resources>