<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/addCallButton" android:title="@string/overflowAddMenuItemText" />
    <item android:id="@id/holdButton" android:title="@string/onscreenHoldText" />
    <item android:id="@id/extraVolumeButtonEnable" android:title="@string/secOnscreenMenuEnableExtraVolume" android:contentDescription="@string/secOnscreenMenuEnableExtraVolumeTTS" />
    <item android:id="@id/extraVolumeButtonDisable" android:title="@string/secOnscreenMenuDisableExtraVolume" android:contentDescription="@string/secOnscreenMenuDisableExtraVolumeTTS" />
    <item android:id="@id/viewContactsButton" android:title="@string/secOnscreenViewContactText" />
    <item android:id="@id/addContactsButton" android:title="@string/secOnscreenAddToContactsText" />
    <item android:id="@id/bluetoothButton" android:visible="false" android:title="@string/audio_mode_bluetooth" />
    <item android:id="@id/rttSwitchToVoiceCall" android:title="@string/secOnscreenMenuSwitchToVoiceCallText" />
    <item android:id="@id/sendMessagesButton" android:title="@string/send_msg" />
</menu>