<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/scrollView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/rtt_dialog_text_color" android:id="@id/custom_dialog_textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/rtt_hint_dialog_heading" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/rtt_dialog_text_color" android:id="@id/custom_dialog_textView_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/rtt_hint_tmo" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="15.0sp" android:textColor="@color/rtt_dialog_text_color" android:id="@id/custom_dialog_textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/rtt_hint_dialog_msgbody1_tmo" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <ImageView android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_marginTop="6.0dip" android:src="@drawable/bullet01" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textColor="@color/rtt_dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/rtt_hint_dialog_msgbody2_tmo" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <ImageView android:layout_width="8.0dip" android:layout_height="8.0dip" android:layout_marginTop="6.0dip" android:src="@drawable/bullet01" />
            <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textColor="@color/rtt_dialog_text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/rtt_hint_dialog_msgbody3_tmo" />
        </LinearLayout>
        <CheckBox android:textSize="18.0sp" android:textColor="@color/rtt_dialog_text_color" android:id="@id/checkBox" android:paddingLeft="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/do_not_show_again" />
    </LinearLayout>
</ScrollView>