<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/callButtons" android:background="@drawable/sec_voicecall_mask_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="26.0" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="11.0">
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="5.0" />
        <LinearLayout android:id="@id/inCallButtonContainer" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:id="@id/inCallButtonLayout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@id/pagerCallButtons" android:layout_width="fill_parent" android:layout_height="wrap_content"
                  xmlns:android="http://schemas.android.com/apk/res/android">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/inCallButtonsUpper" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <com.android.incallui.widget.SecVoiceButton android:enabled="false" android:id="@id/rttSwitchToVoiceCall" android:text="@string/onscreenVoiceCallText" android:drawableTop="@drawable/sec_incall_button_switch_to_voice_icon_rtt" android:layout_marginStart="2.0dip" style="@style/SecInCallButtonRTT" />
                        <com.android.incallui.widget.SecVoiceButton android:enabled="false" android:id="@id/addCallButton" android:text="@string/onscreenAddCallText" android:drawableTop="@drawable/sec_incall_button_add_call_icon_rtt" android:layout_marginEnd="18.0dip" style="@style/SecInCallButtonRTT" />
                        <LinearLayout android:id="@id/endCallButtonContainer" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_weight="0.0">
                            <ImageButton android:id="@id/endCallButton" android:background="@drawable/sec_endcall_button_background_theme" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/sec_voicecall_button_endcall_icon" android:scaleType="center" android:contentDescription="@string/secOnscreenEndCallText" />
                        </LinearLayout>
                        <com.android.incallui.widget.SecVoiceToggleButton android:enabled="false" android:id="@id/muteButton" android:textOn="@string/onscreenMuteText" android:textOff="@string/onscreenMuteText" android:drawableTop="@drawable/sec_incall_button_mute_icon_rtt" android:contentDescription="@string/onscreenMuteText" android:layout_marginStart="18.0dip" style="@style/SecInCallButtonRTT" />
                        <com.android.incallui.widget.SecVoiceToggleButton android:enabled="false" android:id="@id/speakerButton" android:textOn="@string/secOnscreenSpeaker" android:textOff="@string/secOnscreenSpeaker" android:drawableTop="@drawable/sec_incall_button_speaker_icon_rtt" android:soundEffectsEnabled="false" android:contentDescription="@string/secOnscreenSpeaker" android:layout_marginEnd="2.0dip" style="@style/SecInCallButtonRTT" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <View android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="5.0" />
    </LinearLayout>
</LinearLayout>