<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center_horizontal" android:background="@drawable/agif_list_container_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/agif_list_container_margin_side" android:layout_marginEnd="@dimen/agif_list_container_margin_side"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/agif_list_text_container" android:paddingTop="@dimen/agif_list_container_padding_top" android:paddingBottom="@dimen/agif_list_container_padding_Bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/agif_list_container_padding_side" android:paddingEnd="@dimen/agif_list_container_padding_side">
        <ImageButton android:id="@id/close_button" android:background="?android:selectableItemBackgroundBorderless" android:padding="@dimen/agif_button_close_padding" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/agif_button_close_margin" android:src="@drawable/voicecall_gif_close" android:tint="@color/agif_close_button_tint_color" android:layout_alignWithParentIfMissing="true" android:contentDescription="@string/record_notification_button_text_close" android:layout_marginEnd="@dimen/agif_button_close_margin" android:layout_alignParentEnd="true" />
        <TextView android:id="@id/agif_list_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/agif_pickers_title" android:layout_toStartOf="@id/close_button" style="@style/AgifListText" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/agif_list_text">
            <TextView android:id="@id/agif_list_sub_text" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/AgifListSubText" />
            <TextView android:id="@id/agif_list_sub_text_top_sticker" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/agif_pickers_sub_title_top_stickers" style="@style/AgifListSubText" />
        </FrameLayout>
    </RelativeLayout>
    <FrameLayout android:id="@id/agif_page_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/agif_list_text_container">
        <view android:id="@id/agif_list_page" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/agif_contents_margin_side" android:layout_marginEnd="@dimen/agif_contents_margin_side" class="com.android.incallui.agif.AgifViewPager" />
        <include layout="@layout/agif_recommend_view" />
    </FrameLayout>
    <View android:background="@color/agif_list_bottom_divider_color" android:layout_width="fill_parent" android:layout_height="@dimen/agif_list_bottom_divider" android:layout_below="@id/agif_page_container" android:layout_marginStart="@dimen/agif_list_container_padding_side" android:layout_marginEnd="@dimen/agif_list_container_padding_side" />
    <RelativeLayout android:id="@id/agif_tab_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/agif_page_container" android:layout_marginStart="@dimen/agif_list_bottom_margin_side" android:layout_marginEnd="@dimen/agif_list_bottom_margin_side">
        <com.android.incallui.agif.AgifTabImageView android:id="@id/agif_list_add_button" android:background="@drawable/agif_tab_indicator_ripple" android:paddingTop="@dimen/agif_indicator_padding_top" android:paddingBottom="@dimen/agif_indicator_padding_bottom" android:focusable="true" android:visibility="gone" android:layout_width="@dimen/agif_indicator_width" android:layout_height="@dimen/agif_indicator_height" android:src="@drawable/agif_tab_indicator_recommend" android:contentDescription="@string/agif_pickers_add_tab_description" android:paddingStart="@dimen/agif_indicator_padding_side" android:paddingEnd="@dimen/agif_indicator_padding_side" android:layout_alignParentEnd="true" />
        <View android:id="@id/agif_list_add_button_divider" android:background="@color/agif_add_tab_divider_color" android:visibility="gone" android:layout_width="@dimen/agif_add_indicator_divider_width" android:layout_height="@dimen/agif_add_indicator_divider_height" android:layout_marginTop="@dimen/agif_indicator_padding_top" android:layout_marginBottom="@dimen/agif_indicator_padding_bottom" android:layout_toStartOf="@id/agif_list_add_button" />
        <com.android.incallui.agif.AgifSlidingTabLayout android:id="@id/agif_list_bottom" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="@dimen/agif_list_bottom_height" android:fillViewport="true" android:layout_alignWithParentIfMissing="true" android:foregroundGravity="right" android:layout_toStartOf="@id/agif_list_add_button_divider">
            <com.android.incallui.agif.AgifTabIndicator android:gravity="start|center" android:id="@id/agif_list_page_indicator" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </com.android.incallui.agif.AgifSlidingTabLayout>
    </RelativeLayout>
</RelativeLayout>